# Stock-Return-Forecasting

./: .env.example  .gitignore  README.md  cal_outputs.pt  config.yaml  explanation_diagnostics.csv  predictions.csv  pyproject.toml  requirements.txt  results.csv  results_by_subgroup.csv  results_intervals.csv  results_point.csv  results_rolling.csv  slurm-362650.out  slurm-362669.out  slurm-362680.out  slurm-362702.out  slurm-eval-362690.out
calibration/: __init__.py  conformal.py
data/: __init__.py  build_cache.py  collect_real_data.py  dataset.py  download_transcripts_hf.py  event_utils.py  financials.csv  llm_annotator.py  llm_cache.json  loader.py  sp500_tickers.csv  transcripts.csv
encoders/: __init__.py  financial_encoder.py  llm_explainer.py  sentiment_encoder.py  text_encoder.py
experiments/: diagnose_modality_losses.py  evaluate.py  falcon_a30_run_metadata.json  falcon_run_metadata.json  feature_stats.json  llm_confidence.py  modality_loss_diagnostics.csv  regime_thresholds.json  results.csv  results_by_subgroup.csv  results_intervals.csv  results_point.csv  results_selective.csv  results_significance.csv  show_prediction_examples.py  sweep.py  train.py  training_summary.json
frontend/: prediction_viewer.py
logs/: earnings-paper-a30-379386.out
models/: __init__.py  fusion_model.py
scripts/: build_dataset.sh  falcon_sweep.sbatch  falcon_sweep.sh  falcon_train_eval.sbatch  falcon_train_eval.sh  falcon_train_eval_a30.sbatch
src/: __init__.py
tests/: test_join_data.py  test_normalize.py  test_phase1_scaffold.py  test_phase2_data.py  (+6 more)
(+18 files in other folders)
