[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "sp500-earnings-dataset-builder"
version = "0.1.0"
description = "Dataset creation pipeline for S&P 500 earnings transcripts, Yahoo Finance market data, SEC companyfacts, and Reddit activity."
readme = "README.md"
requires-python = ">=3.11"
authors = [{ name = "OpenAI Codex" }]
dependencies = [
  "datasets>=2.14",
  "pandas>=2.0",
  "pyarrow>=12.0",
  "requests>=2.31",
  "yfinance>=0.2.30",
]

[tool.setuptools]
package-dir = {"" = "."}

[tool.setuptools.packages.find]
where = ["."]
include = ["src*"]

[tool.pytest.ini_options]
pythonpath = ["."]
testpaths = ["tests"]
addopts = "-q"
